refactor: improve code style